SERVER-100844 Sharding an unsharded collection fails if a stale unique index remains on the DB-primary shard (#33555)

GitOrigin-RevId: e40e2795dce033d6fd5e285bdc310a0b2c3d02df